2008-08-13  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Core/XmlReadHelper.cs: Add stack trace to error message,
	  replace a 'goto', and fix bug that skipped nodes with same name as
	  start node.

2008-07-22  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Core.Execution/ProcessWrapper.cs,
	  MonoDevelop.Core.Execution/ProcessService.cs: Work around Mono bug
	  410743 - "wapi leak in System.Diagnostic.Process". Fixes "Bug
	  410740 - ProcessWrapper leaks wapi handles".

2008-07-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Serialization/DataContext.cs,
	  MonoDevelop.Core.Serialization/ISerializationAttributeProvider.cs,
	  MonoDevelop.Core.Serialization/XmlMapAttributeProvider.cs: Moved
	  serialization engine to MonoDevelop.Core. Use new syntax for
	  specifying attribute scope.

2008-07-21  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am, MonoDevelop.Core.Serialization,
	  MonoDevelop.Core.Serialization/DataType.cs,
	  MonoDevelop.Core.Serialization/ArrayHandler.cs,
	  MonoDevelop.Core.Serialization/DataContext.cs,
	  MonoDevelop.Core.Serialization/TypeAttributeProvider.cs,
	  MonoDevelop.Core.Serialization/IExtendedDataItem.cs,
	  MonoDevelop.Core.Serialization/SerializationContext.cs,
	  MonoDevelop.Core.Serialization/ISerializationAttributeProvider.cs,
	  MonoDevelop.Core.Serialization/DataCollection.cs,
	  MonoDevelop.Core.Serialization/ItemPropertyAttribute.cs,
	  MonoDevelop.Core.Serialization/DataItem.cs,
	  MonoDevelop.Core.Serialization/ICustomDataItemHandler.cs,
	  MonoDevelop.Core.Serialization/XmlMapAttributeProvider.cs,
	  MonoDevelop.Core.Serialization/DataIncludeAttribute.cs,
	  MonoDevelop.Core.Serialization/DictionaryDataType.cs,
	  MonoDevelop.Core.Serialization/ClassDataType.cs,
	  MonoDevelop.Core.Serialization/ICollectionHandler.cs,
	  MonoDevelop.Core.Serialization/IPropertyFilter.cs,
	  MonoDevelop.Core.Serialization/ItemProperty.cs,